straightened out the form

--- a/login.html
+++ b/login.html
@@ -292,18 +292,21 @@
 		 
 		  <form>
 		  <fieldset>
-		    <label for="name">Name</label>
+		    <label for="name">Name</label> 
+		  	<br />
 		    <input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" />
 		    <br />
 		    <label for="email">Email</label>
+		    <br />
 		    <input type="text" name="email" id="email" value="" class="text ui-widget-content ui-corner-all" />
 		    <br />
 		    <label for="phone">Phone</label>
+		    <br />
 		    <input type="text" name="phone" id="phone" value="" class="text ui-widget-content ui-corner-all" />
 		    <br />
 			<label for="message">Message</label>
-			<textarea name="message" cols="25" rows="10">
-			</textarea>
+			<br />
+			<textarea name="message" cols="25" rows="10"></textarea>
 		  </fieldset>
 		  </form>
 		</div>
